fixed spacing for projects section

--- a/src/App.css
+++ b/src/App.css
@@ -145,11 +145,12 @@ body {
 .projects {
   position: relative;
   display: grid;
+  width: 163.768rem;
   grid-template-columns: 1fr 1fr;
-  width: 90%;
   margin-top: 10rem;
   left: 50%;
   transform: translateX(-50%);
+  grid-gap: 10rem;
 }
 
 .projectBottom {
